test/tests/compiler/9_functions/invalid_types/extra_credit/switch_on_function.plx
pub fn main(none) i32 {
    fn f(none) i32;
    match f {
        return 0
    }
}
